--- a/package.json
+++ b/package.json
@@ -1,20 +1,19 @@
 {
-  "name": "assemble-toc",
-  "description": "Assemble a website from templates and data.",
-  "version": "0.1.0",
+  "name": "assemble-contrib-toc",
+  "description": "Create a table of contents in the generated HTML, using Cheerio.js.",
+  "version": "0.1.1",
   "homepage": "http://assemble.io",
   "author": {
     "name": "Brian Woodward",
-    "email": "brian.woodward@gmail.com",
     "url": "http://github.com/assemble/"
   },
-  "main": "assemble-toc.js",
+  "main": "assemble-contrib-toc.js",
   "repository": {
     "type": "git",
-    "url": "git://github.com/assemble/assemble-toc.git"
+    "url": "git://github.com/assemble/assemble-contrib-toc.git"
   },
   "bugs": {
-    "url": "https://github.com/assemble/assemble-toc/issues"
+    "url": "https://github.com/assemble/assemble-contrib-toc/issues"
   },
   "engines": {
     "node": ">=0.8"
@@ -22,19 +21,13 @@
   "scripts": {
     "test": "grunt test"
   },
-  "devDependencies": {
-    "assemble": "~0.4.0",
-    "grunt": "~0.4.1",
-    "grunt-contrib-clean": "~0.5.0",
-    "grunt-contrib-connect": "~0.5.0",
-    "grunt-contrib-watch": "~0.5.3",
-    "load-grunt-tasks": "~0.1.3",
-    "time-grunt": "~0.1.1"
+  "dependencies": {
+    "cheerio": "~0.12.3"
   },
   "licenses": [
     {
       "type": "MIT",
-      "url": "https://github.com/assemble/assemble-toc/blob/master/LICENSE-MIT"
+      "url": "https://github.com/assemble/assemble-contrib-toc/blob/master/LICENSE-MIT"
     }
   ],
   "keywords": [
@@ -44,8 +37,5 @@
     "site generator",
     "site builder",
     "grunt"
-  ],
-  "dependencies": {
-    "cheerio": "~0.12.3"
-  }
+  ]
 }
