--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "assemble-contrib-toc",
+  "name": "assemble-middleware-toc",
   "description": "Assemble plugin for adding a Table of Contents (TOC) to any HTML page.",
   "version": "0.1.3",
   "homepage": "http://assemble.io",
@@ -10,10 +10,10 @@
   "main": "index.js",
   "repository": {
     "type": "git",
-    "url": "git://github.com/assemble/assemble-contrib-toc.git"
+    "url": "git://github.com/assemble/assemble-middleware-toc.git"
   },
   "bugs": {
-    "url": "https://github.com/assemble/assemble-contrib-toc/issues"
+    "url": "https://github.com/assemble/assemble-middleware-toc/issues"
   },
   "engines": {
     "node": ">=0.8"
@@ -27,7 +27,7 @@
   "licenses": [
     {
       "type": "MIT",
-      "url": "https://github.com/assemble/assemble-contrib-toc/blob/master/LICENSE-MIT"
+      "url": "https://github.com/assemble/assemble-middleware-toc/blob/master/LICENSE-MIT"
     }
   ],
   "keywords": [
