--- a/package.json
+++ b/package.json
@@ -45,9 +45,13 @@
         "grunt-assemble-contextual",
         "grunt-assemble-decompress",
         "grunt-assemble-download",
+        "grunt-assemble-i18n",
         "grunt-assemble-lunr",
+        "grunt-assemble-navigation",
         "grunt-assemble-permalinks",
-        "grunt-assemble-toc"
+        "grunt-assemble-sitemap",
+        "grunt-assemble-toc",
+        "grunt-assemble-wordcount"
       ]
     }
   }
